# swagger-output.json
@@ -3,17 +3,9 @@
   "info": {
     "title": "Gerar Dados",
     "version": "1.0.0",
-    "description": ""
+    "description": "API para geração de dados aleatórios e validação de CPF, CEP, e envio de SMS"
   },
   "host": "localhost:3000",
-  "servers": [
-    {
-      "url": "http://localhost:3000"
-    },
-    {
-      "url": "http://teste-dados.onrender.com/api-docs/"
-    }
-  ],
   "basePath": "/",
   "schemes": [
     "http"
@@ -21,7 +13,7 @@
   "paths": {
     "/gerar-dadosAleatorios": {
       "get": {
-        "description": "",
+        "description": "Endpoint para gerar dados fictícios.",
         "responses": {
           "200": {
             "description": "OK"
@@ -31,16 +23,17 @@
     },
     "/validar-cpf": {
       "post": {
-        "description": "",
+        "description": "Endpoint para validar CPF.",
         "parameters": [
           {
-            "name": "body",
+            "name": "cpf",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
                 "cpf": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "12345678909"
                 }
               }
             }
@@ -48,26 +41,27 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "CPF válido"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "CPF inválido"
           }
         }
       }
     },
     "/validar-cep": {
       "post": {
-        "description": "",
+        "description": "Endpoint para validar CEP.",
         "parameters": [
           {
-            "name": "body",
+            "name": "cep",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
                 "cep": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "12345678"
                 }
               }
             }
@@ -75,17 +69,17 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "CEP válido"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "CEP inválido"
           }
         }
       }
     },
     "/enviar-sms": {
       "post": {
-        "description": "",
+        "description": "Endpoint para enviar SMS.",
         "parameters": [
           {
             "name": "body",
@@ -94,10 +88,12 @@
               "type": "object",
               "properties": {
                 "to": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "+1234567890"
                 },
                 "mensagem": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Mensagem de teste"
                 }
               }
             }
@@ -105,17 +101,17 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "SMS enviado com sucesso"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Erro ao enviar SMS"
           }
         }
       }
     },
-    "/login": {
+    "/inserir-usuario": {
       "post": {
-        "description": "",
+        "description": "Endpoint para inserir um novo usuário no MongoDB.",
         "parameters": [
           {
             "name": "body",
@@ -123,25 +119,35 @@
             "schema": {
               "type": "object",
               "properties": {
-                "usuario": {
-                  "example": "any"
+                "login": {
+                  "type": "string",
+                  "example": "usuarioteste"
                 },
                 "senha": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "senhateste"
+                },
+                "telefone": {
+                  "type": "string",
+                  "example": "+1234567890"
+                },
+                "endereco": {
+                  "type": "string",
+                  "example": "123 Main St, City"
                 }
               }
             }
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Usuário inserido com sucesso"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Falha ao inserir usuário"
           },
-          "401": {
-            "description": "Unauthorized"
+          "500": {
+            "description": "Erro interno do servidor"
           }
         }
       }
